1999-05-13  bertrand  <Bertrand.Guiheneuf@inria.fr>
        
	* camel/camel-mime-message.c (camel_mime_message_init): 
	create recipients hash table
	(_remove_recipient): 
	(_add_recipient):
	(_get_recipients):  new funcs.
	Internal Recipients data structure is
	a bit complicated though.

	* camel/camel-mime-part.c (camel_mime_part_init): 
	create headers hash table

	* camel/camel-mime-message.h: 
	a bunch of get/set header field
	method done. Does nothing yet though.

	* camel/camel-mime-message.[ch] :
	new file. 

1999-05-12  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-mime-part.h (struct ): 
	disposition is now a full GMimeContentField
	object.

	* camel/gmime-content-field.c: new file
	handle "type/subtype ;parameter=value ; parameter=value ..."
	BNF grammar elements
	(gmime_content_field_write_to_file): new func
	
	* camel/gmime-utils.c (gmime_write_header_pair_to_file): 
	namespace change

1999-05-11  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-mime-part.c (_write_to_file): 
	overload wrapper class method.
	(_write_to_file): start to write some text in 
	file.

	* camel/camel-store.c: typo fix.

	* camel/camel-store.c: 
	* camel/camel-service.c: 
	* camel/camel-folder.c: 
	* camel/camel-data-wrapper.c: 
	* camel/camel-mime-part.c: 
	static functions naming follows gnome 
	coding style guide.

	* camel/camel-mime-part.h: implemented public interfaces
	

1999-05-10  Bertrand Guiheneuf  <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-mime-part.c (__camel_mime_part_get_header_lines): 
	(__camel_mime_part_set_header_lines): 
	(__camel_mime_part_get_content_languages): 
	(__camel_mime_part_set_content_languages): 
	(__camel_mime_part_get_encoding): 
	(__camel_mime_part_set_encoding): 
	(__camel_mime_part_get_content_MD5): 
	(__camel_mime_part_set_content_MD5): 
	(__camel_mime_part_get_content_id): 
	(__camel_mime_part_set_content_id): 
	A bunch of new set/get func.

	* camel/gstring-util.c (g_string_list_free): 