@@ -1,3 +1,8 @@
+1999-05-14  bertrand  <Bertrand.Guiheneuf@inria.fr>
+
+	* camel/camel-mime-message.c (camel_mime_message_class_init): 
+	added recipient handling class funcs.
+
 1999-05-13  bertrand  <Bertrand.Guiheneuf@inria.fr>
         
 	* camel/camel-mime-message.c (camel_mime_message_init): 
